# room-reservation

./: .env_example  .gitignore  Dockerfile  Readme.md  docker-compose.yml  fastapi.db  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 37f5dff3cdbd_first_migration.py  3d8e32b5ec74_add_user_model.py  e37da795c2d6_add_description.py  f39f675bb9a5_add_user_relationship_to_reservation.py  fd66fe01a710_add_reservation.py
app/: main.py
app/api/: routers.py  validators.py
app/api/endpoints/: __init__.py  google_api.py  meeting_room.py  reservation.py
app/core/: base.py  config.py  db.py  init_db.py
app/crud/: base.py  meeting_room.py  reservation.py
app/models/: __init__.py  meeting_room.py  reservation.py
app/schemas/: meeting_room.py  reservation.py
app/services/: google_api.py
