[tool.poetry]
name = "room-reservation"
version = "1.0.0"
description = "Training project on developing a FastAPI meeting room booking service API"
authors = ["Nikolay Vavilov <vavilovnv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "~0.111.0"
fastapi-users = {extras = ["sqlalchemy"], version = "~13.0.0"}
sqlalchemy = "~2.0.30"
alembic = "~1.13.1"
pydantic-settings = "^2.2.1"
aiosqlite = "~0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
